wallet in shopuser is increase or decrease when product coin is bought, check config

--- a/Resources/config/services.yaml
+++ b/Resources/config/services.yaml
@@ -8,14 +8,14 @@ services:
     decorates: sylius.templating.helper.currency
     arguments:
       $decoratedHelper: '@BayDay\CoinCurrencyBundle\Templating\Helper\CurrencyHelper.inner'
-      $coinCurrencyCode: "%bayday.coin_currency.code%"
+      $coinCurrencyCode: "%bayday.coin_currency.currency.code%"
 
   BayDay\CoinCurrencyBundle\Converter\CurrencyNameConverter:
     decorates: sylius.currency_name_converter
     arguments:
       $decoratedConverter: '@BayDay\CoinCurrencyBundle\Converter\CurrencyNameConverter.inner'
       $translator: "@translator"
-      $coinCurrencyCode: "%bayday.coin_currency.code%"
+      $coinCurrencyCode: "%bayday.coin_currency.currency.code%"
 
   BayDay\CoinCurrencyBundle\Form\Type\CurrencyType:
     decorates: sylius.form.type.currency
@@ -27,7 +27,7 @@ services:
 
   BayDay\CoinCurrencyBundle\Validator\CoinCurrencyValidator:
     arguments:
-      $coinCurrencyCode: "%bayday.coin_currency.code%"
+      $coinCurrencyCode: "%bayday.coin_currency.currency.code%"
     tags:
       - {name: validator.constraint_validator, lazy: true}
 
@@ -35,13 +35,18 @@ services:
   BayDay\CoinCurrencyBundle\EventListener\CurrencyListener:
     arguments:
       $translator: "@translator"
-      $coinCurrencyCode: "%bayday.coin_currency.code%"
+      $coinCurrencyCode: "%bayday.coin_currency.currency.code%"
     tags:
       - {name: doctrine.event_subscriber, lazy: true}
 
-  app.coin_gateway_factory:
-    class: Payum\Core\Bridge\Symfony\Builder\GatewayFactoryBuilder
+  BayDay\CoinCurrencyBundle\Builder\GatewayFactoryBuilder:
     arguments:
       $gatewayFactoryClass: BayDay\CoinCurrencyBundle\Payum\CoinPayumGatewayFactory
     tags:
       - {name: payum.gateway_factory_builder, factory: "%bayday.coin_currency.gateway%", lazy: true }
+
+  BayDay\CoinCurrencyBundle\Operator\UserWalletOperator:
+    public: true
+    arguments:
+      $shopUserManager: "@sylius.manager.shop_user"
+      $coinProductCode: "%bayday.coin_currency.product.code%"
